# TriModalRAG_System

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  init_setup.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yaml  docker_deploy.yaml  python_publish.yaml
data/description/: summaries.csv
experiments/: experiments.ipynb
serving/: settings.py
serving/gradio/: Dockerfile  gradio.app.py
serving/streamlit_app/: Dockerfile  app.py  app_test.py  audio_handler.py  config.yaml  settings.py
src/artifacts/data/: title_files.txt
src/artifacts/data/embeddings/audio/: audio_embeddings.pt
src/artifacts/data/embeddings/image/: image_embeddings.pt
src/artifacts/data/embeddings/text/: text_embeddings.pt
src/config_params/: __init__.py  constants.py  params.yaml  vectordb.yaml
src/trim_rag/components/: __init__.py
src/trim_rag/components/pinecone/: __init__.py  pinecone_setting.py
src/trim_rag/components/qdrant_db/: __init__.py  qdrant_setting.py  vector_db.py
src/trim_rag/config/: __init__.py  arguments_config.py  manager_config.py
src/trim_rag/data/: __init__.py
src/trim_rag/data/audio/: audio_ingestion.py
src/trim_rag/data/images/: __init__.py  checked_image.py  image_ingestion.py
src/trim_rag/data/text/: __init__.py  file_ingestion.py
src/trim_rag/embedding/: __init__.py  crossAttention.py  multimodal_embedding.py  sharedSpace.py
src/trim_rag/embedding/audio/: __init__.py  embed_audio.py
src/trim_rag/embedding/image/: __init__.py  embed_image.py
src/trim_rag/embedding/text/: __init__.py  embed_text.py
src/trim_rag/exception/: __init__.py  exception.py
src/trim_rag/generation/: __init__.py  customRunnable.py  multimodal_generation.py  multimodal_withmemories.py  post_processing.py  prompt_flows.py
src/trim_rag/inference/: __init__.py  data_preparation.py  embed_infer.py  extract_inputIfer.py  inference.py
src/trim_rag/logger/: __init__.py  logger_init.py  logger_setting.py
src/trim_rag/models/: __init__.py  audio_model.py  custom_audioModel.py  custom_imageModel.py  custom_textModel.py  image_model.py  multi_models.py  text_model.py
src/trim_rag/pipeline/: __init__.py  data_embedding.py  data_ingestion.py  data_processing.py  data_retrieval.py  generation.py  inference.py  qdrant_vectordb.py
src/trim_rag/processing/: __init__.py  record_qdrant.py
src/trim_rag/processing/audio/: __init__.py  audio_processing.py  audio_qdrantdb.py
src/trim_rag/processing/image/: __init__.py  image_processing.py  image_qdrantdb.py
src/trim_rag/processing/text/: __init__.py  text_processing.py  text_qdrantdb.py
src/trim_rag/retrieval/: __init__.py  audio_retrieval.py  image_retrieval.py  retriever_query.py  text_retrieval.py  trimodal_retrieval.py  vector_store.py
src/trim_rag/retrieval/fusion_mechanism/: __init__.py  attention.py  fusion_machine.py  modality_aligner.py  weighted_fusion.py
src/trim_rag/utils/: __init__.py  config.py  inference.py  qdrant_data.py
tests/: test_file.py
tests/config/: gpu.py
tests/integration/: __init__.py  data_embeddings.py  data_ingestion.py  data_processing.py  data_retrieval.py  generation.py  inference.py  main.py  push_drant_db.py  quick_start.py
tests/unit/: image_check.py  location_file.py  logger.py
