[tool.poetry]
name = "trim-rag"
version = "0.1.0"
description = "A MultiModal RAG."
authors = ["Hung Tran"]
license = "MIT"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"

[build-system]
requires = ["poetry>=0.12", "setuptools >= 42.0", "wheel"]
build-backend = "poetry.masonry.api"
# build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.mypy]
mypy_path  = "src"
ignore_missing_imports = true