[tool.poetry]
name = "trim-rag"
version = "0.0.1"
description = "A MultiModal RAG."
authors = ["Hung Tran"]
license = "MIT"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry>=0.12", "setuptools >= 42.0", "wheel"]
# build-backend = "poetry.masonry.api"
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = [
    "tests"
]

[tool.mypy]
mypy_path  = "src"
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

