[metadata]
license = MIT License
author =  
license_file = LICENSE

classifiers = 
    Enviroment :: GPU :: NVIDIA CUDA :: 11
    Enviroment :: GPU :: NVIDIA CUDA :: 11 :: 11.8
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License     
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    ; Programming Language :: Python :: 3.11
    ; Programming Language :: Python :: 3.12
    Operating System :: OS Independent

    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules 




[options]
install_requires = 
    ensure==1.0.2
    py-youtube==1.1.7
python_requires = >=3.9

[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[options.package_data]
VQA_LLM=py.typed

[flake8]
max-line-length = 160
exclude = __init__.py